<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:title="@string/my_profile"
        android:id="@+id/goto_my_profile"
        android:icon="@drawable/profile"
        app:showAsAction="always"/>
<item
    android:title="@string/home"
    android:id="@+id/goto_home"/>

    <item
        android:title="@string/create_meme"
        android:id="@+id/goto_create_meme"
        app:showAsAction="ifRoom"
        android:icon="@drawable/create_meme_icon"/>
    <item
        android:title="@string/settings"
        android:id="@+id/goto_settings"/>
    <item
        android:title="@string/rate_us"
        android:id="@+id/goto_rate_us"/>
    <item
        android:title="@string/about_us"
        android:id="@+id/goto_about_us"/>

</menu>